[package]
name = "test_shreds"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Solana types
solana-entry = "=2.2.1"
solana-sdk = "=2.2.1"

# Serialization
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# gRPC client using jito_protos
jito-protos = { path = "jito_protos" }
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
