[package]
name = "test_shreds"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Solana types for Entry deserialization
solana-entry = "=2.2.1"
solana-sdk = "=2.2.1"

# Serialization
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
